--- a/intro.tex
+++ b/intro.tex
@@ -1,6 +1,6 @@
 \subsection{Założenia projektu:}
 \begin{itemize}
-	\item \textbf{Lokalizacja}: Grabowno Wielkie (wieś), ulica, na której znajdują się domy o adresach 43-57 i 80-90 (włącznie z adresami z literą a)
+	\item \textbf{Lokalizacja}: Grabowno Wielkie (wieś), ulica, na której znajdują się domy o adresach 43-57, 80-90 (włącznie z adresami z literą a) i 121
 	\item \textbf{Grupa odbiorców}: Osoby, które to nie mają dużych zapotrzebowań na szybkie łącza internetowe.
 	\item \textbf{OLT}: Na wschodzie znajduję się Szkoła Podstawowa, która wydaje się być dobrym miejscem na taką infrastrukturę w tym miasteczku.
 	\item \textbf{Swiatłowód}: SM (średnice 8-9 mikrometrów rdzeń, 125 mikrometrów bufor)
