--- a/intro.tex
+++ b/intro.tex
@@ -4,7 +4,7 @@
 	\item \textbf{Grupa odbiorców}: Osoby, które to nie mają dużych zapotrzebowań na szybkie łącza internetowe.
 	\item \textbf{OLT}: Na wschodzie znajduję się Szkoła Podstawowa, która wydaje się być dobrym miejscem na taką infrastrukturę w tym miasteczku.
 	\item \textbf{Swiatłowód}: SM (średnice 8-9 mikrometrów rdzeń, 125 mikrometrów bufor)
-	\item \textbf{Przepustowość}: 1000MB/500MB per end point (budynek). Uwzględnić overbooking na poziomie około 20%
+	\item \textbf{Przepustowość}: 1000MB/500MB per end point (budynek). Uwzględnić overbooking na poziomie około 20\%
 	\item \textbf{Topologia}: P2MP
 	\item \textbf{Architektura}: FTTH
 	\item \textbf{System}: GPON
@@ -18,12 +18,16 @@
 			\makebox[\textwidth]{\includegraphics[width=\textwidth]{grabowno_intro.png}}
 			\caption{Grabowno Wielkie}
 			\label{fig:grabowno_intro}
+			\begin{center}\cite{grabowno_intro}\end{center}
 		\end{figure}
+	
 		\begin{figure}[h!]
 			\makebox[\textwidth]{\includegraphics[width=\textwidth]{plan_intro.png}}
 			\caption{Plan wsi}
 			\label{fig:plan_intro}
+			\begin{center}\cite{plan_intro}\end{center}
 		\end{figure}
+	
 	\end{center}
 
 	Numery działek mające zostać objęte siecią:
