--- a/Miłosz_Mosur_Mateusz_Ossowski_Maciej_Ratajski_temat_2.tex
+++ b/Miłosz_Mosur_Mateusz_Ossowski_Maciej_Ratajski_temat_2.tex
@@ -1,4 +1,5 @@
 \documentclass[12pt]{article} %czcionka 12
+\usepackage[a4paper, total={6in, 9in}]{geometry}
 \usepackage{pdfpages} %wstawianie stron z .pdf
 \usepackage{graphicx} %wstawianie grafiki
 \usepackage{mathptmx} %czcionka Times New Roman
@@ -14,12 +15,18 @@
 
 \renewcommand{\figurename}{Rysunek}
 \renewcommand{\contentsname}{Spis treści}
+\renewcommand{\refname}{Źródła, Bibliografia}
 
 
 \begin{document}
 	\includepdf[pages=-]{title.pdf} %strona tytułowa
 	\tableofcontents
+	
 	\newpage
 	\section{Wstęp}
 		\input{intro.tex}
+		
+	\newpage
+	\bibliographystyle{unsrt}
+	\bibliography{sources.bib}
 \end{document}
