dodanie bibliografii do spisu treści

--- a/Miłosz_Mosur_Mateusz_Ossowski_Maciej_Ratajski_temat_2.tex
+++ b/Miłosz_Mosur_Mateusz_Ossowski_Maciej_Ratajski_temat_2.tex
@@ -8,6 +8,7 @@
 	\onehalfspacing %interlinia 1.5
 \usepackage{ragged2e}
 	\justifying
+\usepackage[nottoc,numbib]{tocbibind}
 
 \author{Miłosz Mosur}
 \author{Mateusz Ossowski}
