--- a/intro.tex
+++ b/intro.tex
@@ -3,8 +3,8 @@
 	\item \textbf{Lokalizacja}: Grabowno Wielkie (wieś), ulica, na której znajdują się domy o adresach 43-57, 80-90 (włącznie z adresami z literą a) i 121
 	\item \textbf{Grupa odbiorców}: Osoby, które to nie mają dużych zapotrzebowań na szybkie łącza internetowe.
 	\item \textbf{OLT}: Na wschodzie znajduję się Szkoła Podstawowa, która wydaje się być dobrym miejscem na taką infrastrukturę w tym miasteczku.
-	\item \textbf{Swiatłowód}: SM (średnice 8-9 mikrometrów rdzeń, 125 mikrometrów bufor)
-	\item \textbf{Przepustowość}: 1000MB/500MB per end point (budynek). Uwzględnić overbooking na poziomie około 20\%
+	\item \textbf{Swiatłowód}: SM (średnice 8-9 mikrometrów rdzeń, 125 mikrometrów płaszcz)
+	\item \textbf{Przepustowość}: 1000Mb/500Mb per end point (budynek). Uwzględnić overbooking na poziomie około 20\%
 	\item \textbf{Topologia}: P2MP
 	\item \textbf{Architektura}: FTTH
 	\item \textbf{System}: GPON
