wstępny projekt logiczny

--- a/Miłosz_Mosur_Mateusz_Ossowski_Maciej_Ratajski_temat_2.tex
+++ b/Miłosz_Mosur_Mateusz_Ossowski_Maciej_Ratajski_temat_2.tex
@@ -26,6 +26,8 @@
 	\newpage
 	\section{Wstęp}
 		\input{intro.tex}
+	\section{Projekt logiczny}
+		\input{logic.tex}
 		
 	\newpage
 	\bibliographystyle{unsrt}
