--- a/logic.tex
+++ b/logic.tex
@@ -29,3 +29,22 @@
 			\end{table}
 		\end{center}
 	\paragraph{Porty:}
+		\begin{center}
+			\begin{table}[htbp]
+					\begin{tabular}{|ll|ll|ll|ll|}
+						\hline
+						\multicolumn{2}{|c|}{\textbf{Podsieć 1}}                     & \multicolumn{2}{l|}{\textbf{Podsieć 2}}                     & \multicolumn{2}{l|}{\textbf{Podsieć 3}}                     & \multicolumn{2}{l|}{\textbf{Podsieć 4}}                     \\ \hline
+						\multicolumn{1}{|c|}{nr działki} & \multicolumn{1}{c|}{port} & \multicolumn{1}{c|}{nr działki} & \multicolumn{1}{c|}{port} & \multicolumn{1}{c|}{nr działki} & \multicolumn{1}{c|}{port} & \multicolumn{1}{c|}{nr działki} & \multicolumn{1}{c|}{port} \\ \hline
+						\multicolumn{1}{|c|}{1x16}       & \multicolumn{1}{c|}{4}    & \multicolumn{1}{l|}{}           &                           & \multicolumn{1}{l|}{}           &                           & \multicolumn{1}{l|}{}           &                           \\ \hline
+						\multicolumn{1}{|l|}{}           &                           & \multicolumn{1}{l|}{}           &                           & \multicolumn{1}{l|}{}           &                           & \multicolumn{1}{l|}{}           &                           \\ \hline
+						\multicolumn{1}{|l|}{}           &                           & \multicolumn{1}{l|}{}           &                           & \multicolumn{1}{l|}{}           &                           & \multicolumn{1}{l|}{}           &                           \\ \hline
+						\multicolumn{1}{|l|}{}           &                           & \multicolumn{1}{l|}{}           &                           & \multicolumn{1}{l|}{}           &                           & \multicolumn{1}{l|}{}           &                           \\ \hline
+						\multicolumn{1}{|l|}{}           &                           & \multicolumn{1}{l|}{}           &                           & \multicolumn{1}{l|}{}           &                           & \multicolumn{1}{l|}{}           &                           \\ \hline
+						\multicolumn{1}{|l|}{}           &                           & \multicolumn{1}{l|}{}           &                           & \multicolumn{1}{l|}{}           &                           & \multicolumn{1}{l|}{}           &                           \\ \hline
+						\multicolumn{1}{|l|}{}           &                           & \multicolumn{1}{l|}{}           &                           & \multicolumn{1}{l|}{}           &                           & \multicolumn{1}{l|}{}           &                           \\ \hline
+						\multicolumn{1}{|l|}{}           &                           & \multicolumn{1}{l|}{}           &                           & \multicolumn{1}{l|}{}           &                           & \multicolumn{1}{l|}{}           &                           \\ \hline
+						\multicolumn{1}{|l|}{}           &                           & \multicolumn{1}{l|}{}           &                           & \multicolumn{1}{l|}{}           &                           & \multicolumn{1}{l|}{}           &                           \\ \hline
+						\multicolumn{1}{|l|}{}           &                           & \multicolumn{1}{l|}{}           &                           & \multicolumn{1}{l|}{}           &                           & \multicolumn{1}{l|}{}           &                           \\ \hline
+					\end{tabular}
+			\end{table}
+		\end{center}
