dodana tabelka portów w sekcji podziałów na podsieci

--- a/Miłosz_Mosur_Mateusz_Ossowski_Maciej_Ratajski_temat_2.tex
+++ b/Miłosz_Mosur_Mateusz_Ossowski_Maciej_Ratajski_temat_2.tex
@@ -9,6 +9,12 @@
 \usepackage{ragged2e}
 	\justifying
 \usepackage[nottoc,numbib]{tocbibind}
+\usepackage{color}
+	\definecolor{Green}{rgb}{0,0.901,0}
+	\definecolor{Turbo}{rgb}{0.901,0.901,0}
+	\definecolor{BrightTurquoise}{rgb}{0,0.901,0.901}
+	\definecolor{Persimmon}{rgb}{1,0.333,0.333}
+\usepackage{tabularray}
 
 \author{Miłosz Mosur}
 \author{Mateusz Ossowski}
