--- a/logic.tex
+++ b/logic.tex
@@ -16,7 +16,7 @@
 	\paragraph{Okablowanie:}
 		SM G657
 	\paragraph{Złącza:}
-		SC (Subscriber Connector)
+		SC/APC (Subscriber Connector)
 	\paragraph{Użyte sprzęgacze:}
 		\begin{center}
 			\begin{table}[htbp]
