tabele do projektu fizycznego

--- a/Miłosz_Mosur_Mateusz_Ossowski_Maciej_Ratajski_temat_2.tex
+++ b/Miłosz_Mosur_Mateusz_Ossowski_Maciej_Ratajski_temat_2.tex
@@ -14,7 +14,9 @@
 	\definecolor{Turbo}{rgb}{0.901,0.901,0}
 	\definecolor{BrightTurquoise}{rgb}{0,0.901,0.901}
 	\definecolor{Persimmon}{rgb}{1,0.333,0.333}
+	\definecolor{Silver}{rgb}{0.752,0.752,0.752}
 \usepackage{tabularray}
+\usepackage{adjustbox}
 
 \author{Miłosz Mosur}
 \author{Mateusz Ossowski}
@@ -34,8 +36,11 @@
 		\input{intro.tex}
 	\section{Projekt logiczny}
 		\input{logic.tex}
-		
 	\newpage
+	\section{Projekt fizyczny}
+		\input{physical.tex}
+	\newpage
+	\clearpage
 	\bibliographystyle{unsrt}
 	\bibliography{sources.bib}
 \end{document}
